added an endpoint to serve a graph
